# EasyGit

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  components.json  index.html  package.json  vite.config.ts
.github/prompts/: plan-diffViewer.prompt.md  plan-diffViewerPerformance.prompt.md  plan-easyGit.prompt.md  plan-easyGitV2.prompt.md
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cache/: diff_cache.rs  diff_parser.rs  mod.rs  models.rs
src-tauri/src/commands/: branch.rs  diff.rs  git.rs  mod.rs  oauth.rs  remote.rs  repo.rs  stash.rs  tags.rs  worktree.rs
src/components/commit/: ConventionalCommitBuilder.tsx  FileChecklist.tsx  parser.ts  reducer.ts  types.ts
src/components/diff/: DiffLines.tsx  DiffPanel.tsx  DiffSheet.tsx  DiffViewer.tsx  highlight.ts  parser.ts  splitView.ts  types.ts  wordDiff.tsx
src/components/layout/: AppShell.tsx  BranchDropdownContent.tsx  CommandPalette.tsx  CurrentBranchDropdown.tsx  Sidebar.tsx  Titlebar.tsx
src/components/remote/: PublishToGitHubDialog.tsx
src/components/ui/: dialog.tsx
src/components/views/: BranchesDialog.tsx  BranchesView.tsx  ChangesView.tsx  ChangesViewHeader.tsx  CloneDialog.tsx  DiffOrCommitPanel.tsx  FileListPanel.tsx  HistoryView.tsx  OpenRepoView.tsx  PlaceholderView.tsx  PublishDialog.tsx  ReleasesView.tsx  SettingsView.tsx  StashView.tsx  WorktreeDialog.tsx  WorktreeView.tsx
src/hooks/: useGitHub.ts  usePreloadVisibleDiffs.ts  useUpdater.ts
src/lib/: auth.ts  git.ts  gitCache.ts  navigationContext.ts
src/store/: authStore.ts  repoStore.ts
